# polars-snowball-stemmer

./: Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  run.py
polars_snowball_stemmer/: __init__.py
src/: expressions.rs
tests/: test_pig_latinnify.py
