[package]
name = "polars-snowball-stemmer"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_snowball_stemmer"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.0", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "0.20.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.46.0", default-features = false }
polars-arrow = { version = "0.46.0", default-features = false }

