[package]
name = "polars_snowball_stemmer"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_snowball_stemmer"
crate-type= ["cdylib"]

[dependencies]
polars = { version = "0.46.0", default-features = false } 
polars-lazy = "0.46.0"
polars-arrow = "0.46.0"
pyo3 = { version = "0.23.0", features = ["extension-module"] }
pyo3-polars = { version = "0.20.0", features = ["derive"] }
rust-stemmers = "1.2.0"
serde = { version = "1", features = ["derive"] }

